# doc_scan_processor

./: .gitignore  README.md  app.py  batch_processor.py  components.py  pyproject.toml  requirements.txt
pages/: editor.py  export.py  gallery.py  image_processor.py  setup.py  viewer.py
